--- a/client/src/Components/Card.css
+++ b/client/src/Components/Card.css
@@ -10,6 +10,11 @@
     font-size: 2rem;
 }
 
+.span-title{
+    color: rgb(243, 228, 14);
+    font-weight: 500;
+}
+
 
 
 
@@ -37,6 +42,7 @@
 
 .container_card:hover{
     box-shadow: 0px 20px 40px rgb(242, 240, 249);
+    transform: translateY(-2%);
     cursor: pointer;
 }
 
@@ -114,7 +120,7 @@ text-decoration: none;
     font-size: 20px;
     font-weight: 500;
     padding: 5px;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .btn-delete{
@@ -124,7 +130,7 @@ text-decoration: none;
     font-size: 20px;
     font-weight: 500;
     padding: 5px;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .btn-update:hover{
@@ -134,7 +140,7 @@ text-decoration: none;
     font-weight: 500;
     padding: 5px;
     color: white;
-    border-radius: 15px;
+    border-radius: 5px;
 }
 
 .btn-delete:hover{
@@ -144,6 +150,6 @@ text-decoration: none;
     font-weight: 500;
     padding: 5px;
     color: white;
-    border-radius: 15px;
+    border-radius:5px;
 }
 
