--- a/client/src/Components/Card.css
+++ b/client/src/Components/Card.css
@@ -1,5 +1,5 @@
 .title{
-    margin-top: 3rem;
+    margin-top: 1rem;
 }
 
 .title h1{
@@ -22,6 +22,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-bottom: 4rem;
 }
 
 
@@ -131,6 +132,7 @@ text-decoration: none;
     font-weight: 500;
     padding: 5px;
     border-radius: 5px;
+    z-index: 10;
 }
 
 .btn-update:hover{
