--- a/client/src/Components/Card.css
+++ b/client/src/Components/Card.css
@@ -155,6 +155,6 @@ text-decoration: none;
     border-radius:5px;
 }
 
-.btn-dark{
+.btn-dark:hover{
     box-shadow: 0px 20px 40px rgba(88, 86, 100, 0.62);
 }
