--- a/client/src/Components/Card.css
+++ b/client/src/Components/Card.css
@@ -23,8 +23,6 @@
     flex-direction: row;
     justify-content: center;
     margin-bottom: 4rem;
-
-   
 }
 
 
@@ -42,7 +40,7 @@
     box-shadow: 0px 20px 40px rgba(88, 86, 100, 0.62);
     transition: 0.5s;
 
-    @media (min-width: 685px) {
+    @media (max-width: 685px) {
         display: flex;
         flex-direction: row;
         justify-content: center;
